Version 26

--Fixed newly-broken visibility toggle in tape playback.  Also, improved the
  way view jump-back looks when visibility shroud turned back on after panning
  around the house in a paused tape.






Version 25   2013-November-27 

--Fixed crash if player commits suicides from the edit screen while some living
  family members have blocked exit paths (thanks Seth Scott).

--Fixed drag-to-place glitch (stubborn tile that won't change) if player moves
  to shift the screen during the drag (thanks Colorfusion).

--Fixed mouse hover visual glitch in whole map saved images (thanks
  Colorfusion).

--Added a back button on object/tool picker grid screens (to leave picker
  without picking anything).  The lack of a way to go back was confusing to
  new users.

--Fixed a visibility glitch for mobile objects and family members when
  positioned behind a diagonal gap.  Before, they could see the robber and
  start moving.  Now their vision is properly blocked by the diagonal gap
  (thanks Iceman).

--What you put at the top of your gallery archive (the visible painting) is
  now remembered (thanks Gyuri).

--Server-side simulator now checks wife_killed_robber status.

--Changed so that a closed trapdoor at the end of a robbery is no longer stuck
  (where replacing it is billed) but instead it has a new property
  (noAutoRevert) that keeps it closed in edit mode (in case an animal is on
  top of it, and should not be seen floating over an open trapdoor in edit
  mode).  Got rid of redundant notDamaged property as a result (thanks Iceman).

--Fixed a bug where the game could get stuck on the pause screen on certain
  platforms after ALT-TABing out and back in (thanks Joshua Collins).

--Added precautions in server code against deleting maps from the map cache
  that are still being referenced elsewhere in the database (thanks Kevin
  Allen).

--Changed useLargestWindow behavior to fill at most 85% of screen instead of
  80% (thanks Jim Fingal). 
